initial UI update to Select Renderers step

--- a/arches_for_science/media/css/project.css
+++ b/arches_for_science/media/css/project.css
@@ -1228,7 +1228,15 @@
     cursor: pointer;
     color: #213e5f;
     font-size: 14px;
+    margin-bottom: 0px;
 }
+
+.importer-config-panel {
+    padding: 2px 15px 15px 15px;
+    border-bottom: 1px solid #ddd;
+}
+
+
 .importer-configuration input[type=radio]{
     margin:0;
 }
