--- a/arches_for_science/templates/views/components/plugins/file-configuration.htm
+++ b/arches_for_science/templates/views/components/plugins/file-configuration.htm
@@ -1,6 +1,6 @@
 {% load i18n %}
-<div class="file-configuration" style="width: 100%;height: calc(100% - 105px);display:flex;">
-    <div class="uploaded-files" style="width: 32.6793%;padding: 10px;padding-top: 0;">
+<div class="file-configuration" style="width: 100vw; margin: -20px; display: flex; height: calc(100% + 40px);">
+    <div class="uploaded-files" style="width: 450px; padding: 10px;">
         <h4><span>{% trans "Uploaded Files" %}</span></h4>
         <span>{% trans "Specify how to process the data files for viewing.  Any additional files (such as images) will be automatically displayed if possible." %}</span>
         <div class="file-button-container">
@@ -59,8 +59,8 @@
             </table>
         </div>
     </div>
-    <div style="cursor:col-resize; width:18px;" class="resizer"></div>
-    <div class="active-files" style="width: 31.9659%; display: flex; flex-direction: column">
+    <div style="cursor:col-resize; width:12px; background: #fcfcfc; border-right: 1px solid #eee; border-left: 1px solid #ddd;" class="resizer"></div>
+    <div class="active-files" style="width: 31.9659%; min-width: 550px; display: flex; flex-direction: column; padding-left: 20px; padding-bottom: 20px;">
         <div data-bind="visible: !(selectedFiles().length > 1) && fileMode() == 'data'">
             <h4 data-bind="text: selectedFile()?.details?.name"></h4>
             <div class="cm" style="border: 1px solid #ddd" >
@@ -116,8 +116,7 @@
             </div>
         </div>
     </div>
-    <div style="cursor:col-resize;width:18px;" class="resizer"></div>
-    <div style="width: 32.3226%;padding: 10px; padding-top: 0;" data-bind="visible: fileMode() == 'data'">
+    <div style="width: 550px; min-width: 550px; padding: 10px; padding: 10px 50px 20px 20px;" data-bind="visible: fileMode() == 'data'">
         {% block importerConfiguration %}
         <!-- ko component: {
             name: 'importer-configuration',
