--- a/arches_for_science/templates/views/components/plugins/importer-configuration.htm
+++ b/arches_for_science/templates/views/components/plugins/importer-configuration.htm
@@ -1,10 +1,10 @@
 {% load i18n %}
 <div class="importer-configuration">
-    <h4><span>{% trans "Importer Configurations" %}</span></h4>
-    <span>{% trans "Define how to import your x/y data" %}</span>
-    <div>
+    <div class="file-config-header">{% trans "Importer Configurations" %}</div>
+    <div class="file-config-instuctions">{% trans "Define how to import your x/y data" %}</div>
+    <div class="importer-list-container">
         <!-- ko foreach: {data: rendererConfigs, as: 'configuration' } -->
-        <div style="padding:8px; display:flex;align-items: center;">
+        <div style="display:flex;align-items: center;">
             <input style="margin: 8px" type="radio" name="selectedConfiguration" data-bind="checked: $parent.selectedConfiguration, value: configuration.configid"></input>
             <span style="flex:1"><span data-bind="text: configuration.name"></span><span data-bind="if: configuration.description"><span class="tip"><i class="fa fa-info-circle"></i><span class="tooltiptext" data-bind="text: configuration.description"></span></span></span></span>
             <i class="fa fa-pencil" role="button" data-bind="click:()=>{$parent.loadConfiguration(configuration);}" aria-label="{% trans Edit %}"></i>
@@ -13,18 +13,18 @@
         <!-- /ko -->
     </div>
     <button class="btn btn-primary" data-bind="click:()=>{showConfigurationPanel(true), editConfigurationId(undefined)}">{% trans "Add Importer Configuration" %}</button>
-    <div data-bind="visible: showConfigurationPanel" style="border: 1px solid #ddd; margin: 10px 0; width: 470px; position: relative; top: -230px;">
+    <div data-bind="visible: showConfigurationPanel" style="border: 1px solid #ddd; width: 470px; position: absolute; top: 4px;">
         <div style="background-color: #004577; color: #fff; padding: 10px; font-weight: bold;">{% trans "Add Importer Configuration" %}</div>
-        <div style="background-color: #fafafa; overflow-y: scroll; height: calc(100vh - 340px);">
+        <div style="background-color: #fafafa; overflow-y: scroll; height: calc(100vh - 337px);">
             <div class="importer-config-panel">
-                <h4 class="file-config-header">{% trans "Importer Name" %}</h4>
-                <input style="height: 28px; margin-top: 5px" type="text" name="configurationName" data-bind="textInput: configurationName" placeholder="Name of Importer">
-                <h4 class="file-config-header">{% trans "Importer Description" %}</h4>
-                <textarea type="text" name="configurationDescription" data-bind="textInput: configurationDescription" placeholder="Describe the Importer">
+                <div class="file-config-header">{% trans "Importer Name" %}</div>
+                <input type="text" name="configurationName" data-bind="textInput: configurationName" placeholder="Name of Importer">
+                <div class="file-config-header">{% trans "Importer Description" %}</div>
+                <textarea style="height: 50px;" type="text" name="configurationDescription" data-bind="textInput: configurationDescription" placeholder="Describe the Importer">
             </div>
             <div class="importer-config-panel">
-                <h4 class="file-config-header">{% trans "Header" %}</h4>
-                <h5>{% trans "Define where your x/y data are found in the file" %}</h5>
+                <div class="file-config-header">{% trans "Header" %}</div>
+                <div class="file-config-instuctions">{% trans "Define where your x/y data are found in the file" %}</div>
                 <div style="display: flex; flex-direction: column; padding-bottom: 5px;">
                     <div style="display:flex; flex-direction: row; align-items:center; margin: 0"><input id="header-config-none" type="radio" name="headerConfig" value="none" data-bind="checked: headerConfig"><label for="header-config-none">{% trans "File does not have a header" %}</label></div>
                     <div style="display:flex; flex-direction: row; align-items:center; margin: 0"><input id="header-config-fixed" type="radio" name="headerConfig" value="fixed" data-bind="checked: headerConfig"><label for="header-config-fixed">{% trans "File has a fixed header (constant number of lines)" %}</label></div>
@@ -34,8 +34,8 @@
                 <input type="text" name="headerFixedLines" data-bind="visible: headerConfig()=='fixed', textInput: headerFixedLines" placeholder="Number of Lines">
             </div>
             <div class="importer-config-panel">
-                <h4 class="file-config-header">{% trans "Footer" %}</h4>
-                <h5>{% trans "Define where your x/y data end in the file" %}</h5>
+                <div class="file-config-header">{% trans "Footer" %}</div>
+                <div class="file-config-instuctions">{% trans "Define where your x/y data end in the file" %}</div>
                 <div style="display: flex; flex-direction: column; padding-bottom: 5px;">
                     <div style="display:flex; flex-direction: row; align-items:center; margin: 0"><input id="header-config-none" type="radio" name="footerConfig" value="none" data-bind="checked: footerConfig"><label for="header-config-none">{% trans "End of File" %}</label></div>
                     <div style="display:flex; flex-direction: row; align-items:center; margin: 0"><input id="header-config-delimited" type="radio" name="footerConfig" value="delimited" data-bind="checked: footerConfig"><label for="header-config-delimited">{% trans "File footer begins after specific text (consistent ending text)" %}</label></div>
@@ -43,8 +43,8 @@
                 <input type="text" name="headerDelimiter" data-bind="visible: footerConfig()=='delimited', textInput: footerDelimiter" placeholder="Ending Text">
             </div>
             <div class="importer-config-panel">
-                <h4>{% trans "Transformations" %}</h4>
-                <h5>{% trans "Optionally define a transformation for \"y\" data" %}</h5>
+                <div class="file-config-header">{% trans "Transformations" %}</div>
+                <div class="file-config-instuctions">{% trans "Optionally define a transformation for \"y\" data" %}</div>
                 <input style="display:inline-block; flex: 1"
                 data-bind="
                 value: selectedTransformation,
@@ -63,8 +63,8 @@
                 }">
             </div>
             <div class="importer-config-panel">
-                <h4>{% trans "Data Column Delimiter" %}</h4>
-                <h5>{% trans "Define how the data are separated" %}</h5>
+                <div class="file-config-header">{% trans "Data Column Delimiter" %}</div>
+                <div class="file-config-instuctions">{% trans "Define how the data are separated" %}</div>
                 <div style="display: flex; flex-direction: row">
                     <div class="data-delimiter-radio"><input id="delimiter-space" type="radio" name="dataDelimiter" value="" data-bind="checked: dataDelimiterRadio"><label for="delimiter-space">{% trans "Whitespace" %}</label></div>
                     <div class="data-delimiter-radio"><input id="delimiter-comma" type="radio" name="dataDelimiter" value="," data-bind="checked: dataDelimiterRadio"><label for="delimiter-comma">{% trans "Comma" %}</label></div>
@@ -72,7 +72,10 @@
                     <div class="data-delimiter-radio"><input id="delimiter-other" type="radio" name="dataDelimiter" value="other" data-bind="checked: dataDelimiterRadio"><label for="delimiter-other">{% trans "Other" %}</label></div>
                 </div>
                 <input type="text" name="delimiterCharacter" data-bind="visible: dataDelimiterRadio()=='other', textInput: dataDelimiter">
-                <div style="display: flex; margin: 5px 0;"><input type="checkbox" name="includeDelimiter" value="includeDelimiter" data-bind="checked:includeDelimiter"><label style="padding: 0 10px" for="header-config-none">{% trans "Include Delimiter in Value (example: + or - might be part of a numeric value)" %}</label></div>
+                <div style="display: flex; margin: 5px 0;">
+                    <input style="margin: 0px 0px 0px 2px;" type="checkbox" name="includeDelimiter" value="includeDelimiter" data-bind="checked:includeDelimiter">
+                    <label style="margin-top: 2px;" for="header-config-none">{% trans "Include Delimiter in Value" %}</label>
+                </div>
             </div>
         </div>
         <div style="display: flex;background-color: #eee;border-top: 1px solid #ddd">
