--- a/arches_for_science/media/css/project.css
+++ b/arches_for_science/media/css/project.css
@@ -1293,6 +1293,7 @@
     display: flex;
     flex-direction: row;
     margin-top: 10px;
+    margin-bottom: 10px;
 }
 .file-configuration .file-buttons{
     flex: 1;
