--- a/arches_for_science/templates/views/components/plugins/file-configuration.htm
+++ b/arches_for_science/templates/views/components/plugins/file-configuration.htm
@@ -9,53 +9,61 @@
             <div class="file-buttons" data-bind="click:() => {fileMode('other'); selectedFiles([])}, css: {active: fileMode() != 'data'}" role="button">{% trans "Additional Files" %}</div>
         </div>
 
-        <div class="" style="border: 1px solid #ddd; width: 100%; padding: 0px 7px; z-index: 1; position: relative; height: 550px; overflow-y: scroll;" data-bind="visible: currentFiles().length > 0" style="overflow-y: scroll; height: 600px;">
-            <table class="table table-striped" cellspacing="0" width="100%">
-                <thead>
-                    <tr class="afs-table-header">
-                        <th class="min-tabletl">{% trans "Name" %}</th>
-                        <th class="min-tabletl">{% trans "Configuration" %}</th>
-                        <th style="width:40px;" class="afs-table-control all"></th>
-                    </tr>
-                </thead>
-                <tbody data-bind="dataTablesForEach: { data: currentFiles, as: 'file', dataTableOptions: fileTableConfig }">
-                    <tr>
-                        <td>
-                            <div style="display: flex; align-items:center;">
-                                <div style="display: flex; align-items: center;">
-                                    <input style="margin: 0px 5px 0px 10px;" type="checkbox" data-bind="visible: $parent.fileMode() == 'data', value: file.fileid, checked: $parent.selectedFiles">
+        <div>
+            <div class="" style="border: 1px solid #ddd; width: 100%; padding: 0px 7px; z-index: 1; position: relative; height: 640px; overflow-y: scroll; overflow-x: hidden;" data-bind="visible: currentFiles().length > 0" style="overflow-y: scroll; height: 600px;">
+                <table class="table table-striped" cellspacing="0" width="100%">
+                    <thead>
+                        <tr class="afs-table-header">
+                            <th class="min-tabletl">{% trans "Name" %}</th>
+                            <th class="min-tabletl">{% trans "Configuration" %}</th>
+                            
+                        </tr>
+                    </thead>
+                    <tbody data-bind="dataTablesForEach: { data: currentFiles, as: 'file', dataTableOptions: fileTableConfig }">
+                        <tr>
+                            <td>
+                                <div style="display: flex; align-items:center;">
+                                    <div style="display: flex; align-items: center;">
+                                        <div style="margin: 0 5px;cursor:pointer" data-bind="click: function() { $parent.displayFile(file); $parent.selectedFile(file); }"><i data-bind="visible: $parent.visibleFile() == file.fileid && $parent.selectedFiles().length <= 1" role="button" aria-label="{% trans "Selected File" %}" class="fa fa-eye"></i></div>
+                                        <input style="margin: 0px 5px 0px 0px;" type="checkbox" data-bind="visible: $parent.fileMode() == 'data', value: file.fileid, checked: $parent.selectedFiles">
+                                    </div>
+                                    <div style="padding:1px 5px;min-height: 39px;align-items:center;display:flex;cursor:pointer; flex: 1" data-bind="click: function() { $parent.displayFile(file); $parent.selectedFile(file); },text: file.details.name"></div>
                                 </div>
-                                <div style="padding:1px 5px;min-height: 39px;align-items:center;display:flex;cursor:pointer; flex: 1" data-bind="click: function() { $parent.displayFile(file); $parent.selectedFile(file); },text: file.details.name"></div>
-                            </div>
-                        </td>
-                        <td style="padding:8px;cursor:pointer" data-bind="click: function() { $parent.displayFile(file); $parent.selectedFile(file); }">
-                            <div data-bind="visible: (typeof file.details?.rendererConfig == 'function')">
-                                <input style="display:inline-block; flex: 1"
-                                    data-bind="
-                                    value: file.details.rendererConfig,
-                                    select2Query: {
-                                        select2Config: {
-                                            clickBubble: false,
-                                            disabled: file.details.disabledConfig,
-                                            width: 'element',
-                                            ajax:{
-                                                url: $parent.rendererUrl,
-                                                results: $parent.processConfigs
-                                            },
-                                            initSelection: $parent.initSelection,
-                                            value: file.details.rendererConfig,
-                                            closeOnSelect: true,
-                                            allowClear: false,
-                                            multiple: false 
-                                        }
-                                    }">
-                            </div>
-                        </td>
-                        <td style="padding:8px;cursor:pointer" data-bind="click: function() { $parent.displayFile(file) }">
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
+                            </td>
+                            <td style="padding:8px;cursor:pointer" data-bind="click: function() { $parent.displayFile(file); $parent.selectedFile(file); }">
+                                <div data-bind="visible: (typeof file.details?.rendererConfig == 'function')">
+                                    <input style="display:inline-block; flex: 1"
+                                        data-bind="
+                                        value: file.details.rendererConfig,
+                                        select2Query: {
+                                            select2Config: {
+                                                clickBubble: false,
+                                                disabled: file.details.disabledConfig,
+                                                width: 'element',
+                                                ajax:{
+                                                    url: $parent.rendererUrl,
+                                                    results: $parent.processConfigs
+                                                },
+                                                initSelection: $parent.initSelection,
+                                                value: file.details.rendererConfig,
+                                                closeOnSelect: true,
+                                                allowClear: false,
+                                                multiple: false 
+                                            }
+                                        }">
+                                </div>
+                            </td>
+                            
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            
+        </div>
+        <div class="table-tools-container">
+            <div class="import-tool">x files</div>
+            <div class="import-tool">Select All</div>
+            <div class="import-tool">Remove Importer</div>
         </div>
     </div>
     <div style="cursor:col-resize; min-width:12px; background: #fcfcfc; border-right: 1px solid #eee; border-left: 1px solid #ddd;" class="resizer"></div>
