--- a/arches_for_science/templates/views/components/cards/file-renderers/xy-reader.htm
+++ b/arches_for_science/templates/views/components/cards/file-renderers/xy-reader.htm
@@ -6,7 +6,8 @@
 <!-- ko component: {
     name: 'importer-configuration',
     params: {
-        selectedConfiguration: selectedConfig
+        selectedConfiguration: selectedConfig,
+        alert: alert
     }
 } --> 
 <!-- /ko -->
