--- a/arches_for_science/templates/views/components/workflows/upload-dataset/select-renderer-step.htm
+++ b/arches_for_science/templates/views/components/workflows/upload-dataset/select-renderer-step.htm
@@ -3,5 +3,6 @@
         name: 'file-configuration',
         params: {
             files: files,
+            alert: alert
         }
     } --> <!-- /ko -->
