--- a/arches_for_science/templates/views/components/plugins/file-configuration.htm
+++ b/arches_for_science/templates/views/components/plugins/file-configuration.htm
@@ -123,7 +123,8 @@
             name: 'importer-configuration',
             params: {
                 selectedConfiguration: selectedConfiguration,
-                rendererConfigs: rendererConfigs
+                rendererConfigs: rendererConfigs,
+                alert: alert
             }
         } --> 
         <!-- /ko -->
