Remebers the selected file, #1376

--- a/arches_for_science/media/css/project.css
+++ b/arches_for_science/media/css/project.css
@@ -1302,3 +1302,8 @@
     display: flex;
     align-items: center;
 }
+
+.file-workbench-file.selected,
+.file-workbench-file.selected:hover {
+    background: #b4d1f0;
+}
