fixes issue with file interpretation step

--- a/arches_for_science/templates/views/components/plugins/file-configuration.htm
+++ b/arches_for_science/templates/views/components/plugins/file-configuration.htm
@@ -33,6 +33,7 @@
                             <div data-bind="visible: (typeof file.details?.rendererConfig == 'function')">
                                 <input style="display:inline-block; flex: 1"
                                     data-bind="
+                                    value: file.details.rendererConfig,
                                     select2Query: {
                                         select2Config: {
                                             clickBubble: false,
