Indent child physical things in sidebar #1378

--- a/arches_for_science/media/css/project.css
+++ b/arches_for_science/media/css/project.css
@@ -198,6 +198,10 @@
     cursor: pointer;
 }
 
+.wf-multi-tile-step-list .child {
+    margin-left: 20px;
+}
+
 .wf-multi-tile-btn-complete {
     position: absolute;
     bottom: 305px;
