--- a/arches_for_science/templates/views/components/plugins/init-workflow.htm
+++ b/arches_for_science/templates/views/components/plugins/init-workflow.htm
@@ -1,6 +1,6 @@
 {% load i18n %} 
 
-<div>
+<div style="width: 100%;">
     <!-- Modal -->
     <!-- ko if: shouldShowIncompleteWorkflowsModal() -->
     <div 
