sample based UI fixes

--- a/arches_for_science/media/css/project.css
+++ b/arches_for_science/media/css/project.css
@@ -1373,8 +1373,14 @@
     text-align: center;
     margin: 16px 0px 16px 30px;
     height:fit-content; 
-    background-color: #fde9ad;
+    background-color: #FFFF00;
+    border: 1px solid #9951C0;
+    border-radius: 2px;
+    color: #440468;
+    font-weight: 400;
     overflow-y: auto;
+    padding: 40px;
+    width: 600px;
 }
 
 .afs-error-message {
