Show physical thing icons in resource select widgets #1391

--- a/arches_for_science/templates/views/components/workflows/select-phys-thing-step.htm
+++ b/arches_for_science/templates/views/components/workflows/select-phys-thing-step.htm
@@ -39,6 +39,9 @@
         <div data-bind="component: {
             name: 'resource-instance-select-widget',
             params: {
+                graphids: [
+                    physicalThingGraphId,
+                ],
                 termFilter: termFilter(),
                 renderContext: 'workflow', 
                 value: physicalThingValue,
