--- a/arches_for_science/templates/javascript.htm
+++ b/arches_for_science/templates/javascript.htm
@@ -17,6 +17,7 @@
     format_render_map = '(format)=>{return "{% url "format_render_map" "aaaaaaaa" %}".replace("aaaaaaaa", format)}'
     download_project_files = "{% url 'download_project_files' %}"
     temp_file = "{% url 'temp_file' %}"
+    add_chemical_analysis_images_file_upload = "{% url 'add_chemical_analysis_images_file_upload' %}"
 ></div>
 {% endblock arches_urls %}
 
